--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,11 @@
- 
+.jumbotron {
+  margin-top: 80px;
+}
+.col-md-12 {
+  text-align: center;
+}
+.headerImage {
+  text-align: center;
+  margin-bottom: -160px;
+  margin-top: -70px;
+}
